# PP

./: README.md
lab1/: CMakeLists.txt  README.md  matrix_mult.cpp  verify_results.py
lab2/: CMakeLists.txt  README.md  benchmark_omp.cpp  matrix_mult_omp.cpp  run_bencmark.sh  verify_omp.py
lab3/: CMakeLists.txt  README.md  benchmark_mpi.cpp  matrix_mult_mpi.cpp  run_benchmark.sh  verify_mpi.py
lab4/: CMakeLists.txt  README.md  benchmark_cuda.cu  matrix_mult_cuda.cu  run_bencmark.sh  verify_cuda.py
